# pdac_new

./: .gitignore  checkpoint_utils.py  debug_eval.py  lightning_warnings.py  new_progressive.py  pyproject.toml  run_stanford_ablation.sh  single_gpu_runtime.py  test.sh  trainer_runtime.py
data/: data_transforms.py  fastmri_data.py
data/stanford/: convert_stanford2d.py  stanford_data.py
experiments/standford2d_ab1/lightning_logs/version_0/: hparams.yaml
experiments/standford2d_pdac_dymodel/lightning_logs/version_0/: hparams.yaml
experiments/standford2d_pdac_dymodel/lightning_logs/version_1/: hparams.yaml
experiments/standford2d_pdac_dymodel/lightning_logs/version_10/: hparams.yaml
experiments/standford2d_pdac_dymodel/lightning_logs/version_11/: hparams.yaml
experiments/standford2d_pdac_dymodel/lightning_logs/version_12/: hparams.yaml
experiments/standford2d_pdac_dymodel/lightning_logs/version_13/: hparams.yaml
experiments/standford2d_pdac_dymodel/lightning_logs/version_14/: hparams.yaml
models/: center_mask_scheduler.py  humus_net_ab1.py  humus_net_ab2.py  humus_net_ab3.py  humus_net_pdac.py  humus_net_pdac2.py  humus_net_pdac_singlecoil.py  humus_pdac_block.py  humus_pdac_block_ab1.py  humus_pdac_block_ab2.py  humus_pdac_block_singlecoil.py
pdac_examples/: eval_pdac_fastmri.py  eval_pdac_stanford.py  train_ab_1.py  train_ab_2.py  train_ab_3.py  train_pdac_fastmri.py  train_pdac_fastmri2.py  train_pdac_stanford.py
pdac_examples/config/stanford2d/: ab_1.yaml  ab_2.yaml  ab_3.yaml  pdac.yaml  pdac_continuw.yaml  pdacalldata.yaml  pdacenergyeven.yaml  pdacinverse.yaml  pdactrival.yaml
pl_modules/: fastmri_data_module.py  mri_module.py  pdac_module.py  pdac_module_ab1.py  pdac_module_ab2.py  pdac_module_ab3.py  pdac_singlecoil_module.py  stanford_data_module.py
pseudo_tem/: export_selected_stanford_arrays.py  export_stanford_metrics.py  render_stanford_case_comparisons.py
tests/: test_fixed_kspace_hierarchy_multicoil.py  test_fixed_kspace_hierarchy_multicoil_gpu.py  test_stanford_ablation_models.py
utils/: fixed_kspace_hierarchy_multi_coil_common.py  fixed_kspace_hierarchy_multi_coil_common_gpu.py  fixed_kspace_hierarchy_multi_coil_fastmri.py  fixed_kspace_hierarchy_multi_coil_fastmri_gpu.py  fixed_kspace_hierarchy_multi_coil_standford.py  fixed_kspace_hierarchy_multi_coil_standford_gpu.py  plot.py  power.py  theory.py
(+63 files in other folders)
